fix:path wrong writed

--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
             </div>
         </aside>
         <section>
-            <img src="text_6.svg" alt="asistencia">
+            <img src="images/text_6.svg" alt="asistencia">
         </section>
        <img src="images/bg_stain.png" alt="mancha">
        <img src="images/bg_stain.png" alt="mancha">
