--- a/index.html
+++ b/index.html
@@ -578,10 +578,10 @@
                     <img src="images/text_12.png" alt="Nature Image #1">
                   </li>
                   <li class="slide">
-                    <img src="https://source.unsplash.com/eOpewngf68w" alt="Nature Image #2">
+                    <img src="https://images.unsplash.com/photo-1612441804231-77a36b284856?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8M3x8bW91bnRhaW4lMjBsYW5kc2NhcGV8ZW58MHx8MHx8fDA%3D" alt="Nature Image #2">
                   </li>
                   <li class="slide">
-                    <img src="https://source.unsplash.com/ndN00KmbJ1c" alt="Nature Image #3">
+                    <img src="https://images.unsplash.com/photo-1604223190546-a43e4c7f29d7?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8bW91bnRhaW4lMjBsYW5kc2NhcGV8ZW58MHx8MHx8fDA%3D" alt="Nature Image #3">
                   </li>
                 </ul>
               </div>
