--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Start Up</title>
+    <title>Nuestra Boda</title>
     <link rel="stylesheet" href="styles.css" type="text/css">
     <script defer src="script.js"></script>
 </head>
